--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <!-- css -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" crossorigin="anonymous" />
 <!-- <link rel="stylesheet" type="text/css" href="./css/style.css"/> -->
-<link rel="stylesheet" type="text/css" href="./css/bougie.css"/>
+<link rel="stylesheet" type="text/css" href="./scss/style.css"/>
 <!-- js -->
 <script defer src="./js/app.js"></script>
 <title>Tangram</title>
