--- a/index.html
+++ b/index.html
@@ -19,13 +19,19 @@
         <h1>TANGRAM TEST</h1>
     </header>
     <section class="first_page">
+        <section class="bouton">
         <div class="btn_carre">
+            <div class="boutonhaut">
             <button class="reset">RESET</button>
             <button class="sort">SORT</button>
+        </div>
             <button class="button button--basic">Basic</button>
             <button class="cygne">Cygne</button>
             <button class="bougie">Bougie</button>
+            <button class="serpent">Serpent</button>
+            <button class="poisson">Poisson</button>
         </div>
+    </section>
 
         <article class="carre_tangram bougie">
             
