--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 <!-- <link rel="stylesheet" type="text/css" href="./css/style.css"/> -->
 <link rel="stylesheet" type="text/css" href="./scss/style.css"/>
 <!-- js -->
+<script type="text/javascript">
+    function switchStyle(style){
+       document.getElementById("mycss").setAttribute("href", style);
+    }
+    </script>
 <script defer src="./js/app.js"></script>
 <title>Tangram</title>
 </head>
@@ -26,7 +31,7 @@
             <button class="sort">SORT</button>
         </div>
             <button class="button button--basic">Basic</button>
-            <button class="cygne">Cygne</button>
+            <button onclick="switchStyle('_cygne.scss')">Cygne</button>
             <button class="bougie">Bougie</button>
             <button class="serpent">Serpent</button>
             <button class="poisson">Poisson</button>
